Fix overlap in ui on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -61,9 +61,10 @@ button:active,
 
 .top-bar {
   position: fixed;
-  top: 0.4vh;
+  top: 0.5%;
   left: 0.3%;
   width: 99.4%;
+  height: 7%;
 
   display: flex;
   justify-content: flex-end;
@@ -86,8 +87,8 @@ button:active,
 .sidebar {
   position: fixed;
   left: 0.3%;
-  top: 7.6vh;
-  height: 92vh;
+  top: 8%;
+  height: 91%;
   width: 16vw;
 
   min-width: 200px;
